Long scrolling page layout turned back because of contact form replacing out of the screen issues on mobile

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,9 +1,10 @@
-.scroll-window, 
+/* .scroll-window,  */
+.page-set, 
 .section { 
-	width: 100%; height: 100vh;  
+	width: 100%; 
 } 
 
-.scroll-window { 
+/* .scroll-window { 
 	overflow: hidden; 
 
 } 
@@ -16,21 +17,21 @@
 .scroll-track { 
 	background-color: burlywood; 
 
-}
+} */
 
 /* body { 
 	overflow: hidden; 
 
-}  */
+}  */ 
 
-/* .page { 
+/* .page-set { 
 	position: absolute; 
 	
-}   */ 
+}    */ 
 
 .section { 
 	position: relative; 
-	overflow-y: scroll;  
+	/* overflow-y: scroll;   */
 
 } 
 
@@ -62,7 +63,7 @@ button {
 .section-main { 
 	overflow: hidden; 
 
-}
+} 
 
 .cover-image { 
 	width: 100%; height: 100%; 
